--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Prompt:wght@800&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-2DwpQvEo6Gwh8h1Km4QJKyDWvMq3hquDnh9X0pUrnZ6d+j5pPngzO5OeN1Y5Yhx/5f/EgqxN/9oBpwC/Livfg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     
   </head>
     
@@ -74,6 +76,10 @@
     <span>T</span>
   </div>
 </div>
+
+
+
+
 
 
     <div class="wrapper">
